<resources>
    <string name="app_name">Social Tech</string>
    <string name="provincia">Provincia: </string>
    <string name="nombre">Nombre: </string>
    <string name="apellido">Apellido: </string>
    <string name="email">Email: </string>
    <string name="telefono">Teléfono: </string>
    <string name="nuevo_contacto">Nuevo Contacto</string>
    <string name="nueva_empresa">Nueva Empresa</string>
    <string name="formacion">Formación: </string>
    <string name="sexo">Sexo: </string>
    <string name="poblacion">Población: </string>
    <string name="edad">Edad: </string>
    <string name="nombre_contacto">Nombre*</string>
    <string name="apellidos_contacto">Apellidos*</string>
    <string name="numero_contacto">Introduzca el telefono*</string>
    <string name="email_contacto">Introduzca el email*</string>
    <string name="formacion_contacto">Introduzca la formacion</string>
    <string name="poblacion_contacto">Introduzca la provincia</string>
    <string name="numero_contactos">Contactos agregados:</string>
    <string name="numero_empresas">Empresas agregadas:</string>
    <string name="sexo_contacto">Introduzca el sexo:*</string>
    <string name="sexo_masculino">Hombre</string>
    <string name="sexo_femenino">Mujer</string>
    <string name="edad_contacto">Introduzca la edad:*</string>
    <string name="lista_contactos">Lista de contactos</string>
    <string name="lista_empresas">Lista de empresas</string>
    <string name="añadir">Añadir</string>
    <string name="contactosLista">Número de contactos: </string>
    <string name="localidad_contacto">Introduzca la localidad</string>
    <string name="direccion_empresa">Introduzca la dirección</string>
    <string name="observaciones_empresa">Observaciones:</string>
    <string name="contacto_empresa">Contacto asociado:</string>
    <string name="localidad">Localidad:</string>
    <string name="direccion">Direccion:</string>
    <string name="miCorreo">f.manu_97@hotmail.com</string>
    <string name="texto_restriccion1_contacto_empresa">*Debe introducir el nombre y los apellidos completos del contacto</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="texto_restriccion2_contacto_empresa">*El nombre del contacto debe de estar en tu lista de contactos</string>
</resources>
