<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlue2"
    tools:context="com.example.fermach.socialtech.MainActivity"
    android:weightSum="1"
    >



    <TextView
        android:id="@+id/textView_nombre"
        android:background="@color/colorBlue3"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_contacto"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Introduzca un nombre"
        android:inputType="text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue3"
        android:text="@string/apellidos_contacto"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Introduzca el apellido"
        android:inputType="text"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textView_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue3"
        android:textColor="@color/colorWhite"
        android:text="@string/numero_contacto"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editText_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Introduzca el telefono"
        android:textSize="20sp"
        android:inputType="number"/>

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue3"
        android:text="@string/email_contacto"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Introduzca el email"
        android:inputType="text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_formacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue3"
        android:text="@string/formacion_contacto"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        />

    <Spinner
        android:id="@+id/spinner_formacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/textView_poblacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue3"
        android:text="@string/poblacion_contacto"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_provincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/textView_edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue3"
        android:text="@string/edad_contacto"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView_edad_elegida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue2"
        android:text=" "
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textView_sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue3"
        android:text="@string/sexo_contacto"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/Rgroup"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio1"
            android:text="@string/sexo_masculino"
          />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio2"
            android:text="@string/sexo_femenino"
           />

    </RadioGroup>

    <RelativeLayout
        android:id="@+id/mi_RLayout"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:background="@color/colorBlue1">

        <Button
            android:id="@+id/btn_alta"
            android:layout_width="143sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_cancelar"
            android:layout_alignBottom="@+id/btn_cancelar"
            android:layout_column="0"
            android:layout_marginEnd="31dp"
            android:layout_row="0"
            android:layout_toStartOf="@+id/btn_cancelar"
            android:background="@color/colorBlue3"
            android:text="Añadir"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="143sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_column="0"
            android:layout_marginEnd="37dp"
            android:layout_row="0"
            android:background="@color/colorBlue3"
            android:text="Cancelar"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />


    </RelativeLayout>


    <Button
        android:id="@+id/btn_listaContacts"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_column="0"
        android:layout_row="0"
        android:background="@color/colorBlue3"
        android:text="Lista de contactos"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_num_contactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.54"
        android:background="@color/colorBlue1"
        android:text="@string/numero_contactos"
        android:textSize="20sp" />


</LinearLayout>
</ScrollView>