<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue3"
    android:id="@+id/item_lista_empresa"
    >

    <RelativeLayout
        android:layout_width="84dp"
        android:layout_height="103dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground2"
            android:src="@drawable/empresa"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/empresaNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:textColor="@color/colorWhite"
            android:textSize="19sp"
            android:text="@string/nombre"/>

        <TextView
            android:id="@+id/empresaProvincia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="@string/provincia"
            android:textColor="@color/colorWhite" />


        <TextView
            android:id="@+id/empresaEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:text="@string/email"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/empresaTelefono"
            android:layout_width="match_parent"
            android:text="@string/telefono"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:textColor="@color/colorWhite" />


    </LinearLayout>


</LinearLayout>