<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlue2"
    tools:context="es.vcarmen.socialtech.MainActivity">

    <TextView
        android:id="@+id/textView_nombre"
        android:background="@color/colorBlue3"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_contacto"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/editText_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Introduzca un nombre"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue3"
        android:text="@string/apellidos_contacto"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Introduzca el apellido"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/textView_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue3"
        android:textColor="@color/colorWhite"
        android:text="@string/numero_contacto"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/editText_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Introduzca el telefono"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue3"
        android:textColor="@color/colorWhite"
        android:text="@string/sexo_contacto"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/editText_sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Introduzca el sexo"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mi_RLayout"
        android:background="@color/colorBlue1"
            >

        <Button
            android:id="@+id/btn_alta"
            android:background="@color/colorBlue3"
            android:textColor="@color/colorWhite"
            android:layout_width="143sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_column="0"
            android:layout_marginStart="26dp"
            android:layout_row="0"
            android:text="Añadir"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/btn_cancelar"
            android:background="@color/colorBlue3"
            android:textColor="@color/colorWhite"
            android:layout_width="143sp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_column="0"
            android:layout_marginStart="200dp"
            android:layout_row="0"
            android:text="Cancelar"
            android:textSize="25sp" />
    </RelativeLayout>

</LinearLayout>
